<resources>
    <string name="app_name">ExamenProm2</string>
    <string name="identificate">IDENTIFICATE</string>
    <string name="soy_alumno">Soy Alumno</string>
    <string name="soy_profesor">Soy Profesor</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="volver">Volver</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="bot_n_de_ayuda">Botón de ayuda</string>
    <string name="bot_n_para_cambiar_idioma">Botón para cambiar idioma</string>
    <string name="jugar">Jugar</string>
    <string name="ver_puntuaci_n">Ver Puntuación</string>
    <string name="juego_rellenar_huecos">Juego Rellenar Huecos</string>
    <string name="juego_drag_drop"><![CDATA[Juego Drag & Drop]]></string>
    <string name="boton_para_cambiar_idioma">Botón para cambiar idioma</string>
    <string name="boton_de_ayuda">Botón de ayuda</string>
    <string name="ver_puntuacion">Ver Puntuación</string>
    <string name="crear_alumno">Crear Alumno</string>
    <string name="men_del_profesor">Menú del Profesor</string>
    <string name="crear_grupo">Crear Grupo</string>
    <string name="consultar_puntuaciones">Consultar Puntuaciones</string>
    <string name="crear_nuevo_alumno">Crear Nuevo Alumno</string>
    <string name="nombre_del_alumno">Nombre del alumno</string>
    <string name="guardar_alumno">Guardar Alumno</string>
    <string name="crear_nuevo_grupo">Crear Nuevo Grupo</string>
    <string name="nombre_del_grupo">Nombre del grupo</string>
    <string name="seleccionar_alumnos">Seleccionar Alumnos</string>
    <string name="guardar_grupo">Guardar Grupo</string>
    <string name="juego_arrastra_la_imagen_correcta">Juego: Arrastra la Imagen Correcta</string>
    <string name="verificar_respuestas">Verificar Respuestas</string>
    <string name="escuchar_canci_n"> Escuchar Canción</string>
    <string name="juego_completa_la_canci_n">Juego: Completa la Canción</string>
    <string name="palabra_1">Palabra 1</string>
    <string name="palabra_2">Palabra 2</string>
    <string name="palabra_3">Palabra 3</string>
    <string name="palabra_4">Palabra 4</string>
    <string name="puntuaciones_de_los_alumnos">Puntuaciones de los Alumnos</string>
</resources>