<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".interfaz.PrincipalActividad">

    <!-- Título de la App -->
    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identificate"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Botón para Alumno -->
    <Button
        android:id="@+id/btnAlumno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/soy_alumno"
        android:textSize="18sp"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tituloApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <!-- Botón para Profesor -->
    <Button
        android:id="@+id/btnProfesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/soy_profesor"
        android:textSize="18sp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnAlumno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
